feat : 대기열 시간 설정 파일로 변경

--- a/hhplus-concert-reservation/src/main/resources/application.yml
+++ b/hhplus-concert-reservation/src/main/resources/application.yml
@@ -20,3 +20,7 @@ spring:
     show-sql: true
     open-in-view: false
     # defer-datasource-initialization: true
+
+queue:
+  scan-time: "0 * * * * *"
+  expired-time: "1"
