--- a/hhplus-concert-reservation/src/main/resources/application.yml
+++ b/hhplus-concert-reservation/src/main/resources/application.yml
@@ -15,12 +15,18 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
-        format_sql: true
-        use_sql_comments: true
-    show-sql: true
+        #format_sql: true
+        #use_sql_comments: true
+    #show-sql: true
     open-in-view: false
     # defer-datasource-initialization: true
 
 queue:
   scan-time: "0 * * * * *"
   expired-time: "1"
+
+#p6spy query logging
+decorator:
+  datasource:
+    p6spy:
+      enable-logging: true
