--- a/hhplus-concert-reservation/src/main/resources/application.yml
+++ b/hhplus-concert-reservation/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
         #use_sql_comments: true
     #show-sql: true
     open-in-view: false
-    # defer-datasource-initialization: true
+    defer-datasource-initialization: true
 
 queue:
   scan-time: "0 * * * * *"
