config : 좌석 만료 시간 추가

--- a/hhplus-concert-reservation/src/main/resources/application.yml
+++ b/hhplus-concert-reservation/src/main/resources/application.yml
@@ -23,7 +23,8 @@ spring:
 
 queue:
   scan-time: "0 * * * * *"
-  expired-time: "1"
+seat:
+  scan-time: "0 * * * * *"
 
 #p6spy query logging
 decorator:
