--- a/.github/workflows/CI-pipeline.yml
+++ b/.github/workflows/CI-pipeline.yml
@@ -1,6 +1,8 @@
 name: PullRequest CI/CD
 
 on:
+  push:
+    branches: ["master", "develop"]
   pull_request:
     branches: ["master", "develop"]
 
