--- a/.github/workflows/CI-pipeline.yml
+++ b/.github/workflows/CI-pipeline.yml
@@ -1,7 +1,7 @@
 name: PullRequest CI
 
 on:
-  pull_request:
+  push:
     branches:
       - develop
       - 'release-*'
@@ -11,7 +11,7 @@ permissions:
 
 env:
   # Spring Boot Active Profile
-  ACTIVE_PROFILE: ${{ github.ref == 'refs/heads/master' && 'prd' || 'dev' }} 
+  ACTIVE_PROFILE: ${{ github.ref == 'refs/heads/master' && 'prd' || 'dev' }}
   # AWS Region
   AWS_REGION: ap-northeast-2
   # 도커 컨테이너명
@@ -30,66 +30,6 @@ jobs:
     runs-on: ubuntu-latest
     # 체크아웃
     steps:
-
-    - uses: actions/checkout@v4
-
-    # JDK 설정
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-
-    # Gradle clean build
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
-      with:
-        arguments: clean build
-        cache-read-only: ${{ github.ref != 'refs/heads/master' && github.ref != 'refs/heads/develop' }}
-      env:
-        SPRING_PROFILES_ACTIVE: ${{ env.ACTIVE_PROFILE }}
-
-    # AWS 자격 인증 설정
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ env.AWS_REGION }}
-
-    # ECR 로그인
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
-
-    # ECR에 도커 이미지 Push
-    - name: Push docker image to ECR
-      id: build-image
-      env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        IMAGE_TAG: latest
-      run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
-
-    # ECS Task 정의
-    - name: Fill in the new image ID in the Amazon ECS task definition
-      id: task-def
-      uses: aws-actions/amazon-ecs-render-task-definition@v1
-      with:
-        task-definition: ${{ env.ECS_TASK_DEFINITION }}
-        container-name: ${{ env.CONTAINER_NAME }}
-        image: ${{ steps.build-image.outputs.image }}
-
-    # ECS Task Push
-    - name: Deploy Amazon ECS task definition
-      uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-      with:
-        task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: ${{ env.ECS_SERVICE }}
-        cluster: ${{ env.ECS_CLUSTER }}
-        wait-for-service-stability: true
 
       - uses: actions/checkout@v4
 
@@ -150,4 +90,3 @@ jobs:
           service: ${{ env.ECS_SERVICE }}
           cluster: ${{ env.ECS_CLUSTER }}
           wait-for-service-stability: true
-
