--- a/.github/workflows/CI-pipeline.yml
+++ b/.github/workflows/CI-pipeline.yml
@@ -15,7 +15,7 @@ env:
   # AWS Region
   AWS_REGION: ap-northeast-2
   # 도커 컨테이너명
-  CONTAINER_NAME: example-application
+  CONTAINER_NAME: concert-api
   # ECR 리포지토리명
   ECR_REPOSITORY: ${{ github.ref == 'refs/heads/master' && 'concert-api-prd' || 'concert-api-dev' }}
   # ECS 클러스터명
@@ -48,6 +48,13 @@ jobs:
           cache-read-only: ${{ github.ref != 'refs/heads/master' && github.ref != 'refs/heads/develop' }}
         env:
           SPRING_PROFILES_ACTIVE: ${{ env.ACTIVE_PROFILE }}
+
+      # Test Report
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@5f47764eec0e1c1f19f40c8e60a5ba47e47015c5
+        if: success() || failure() # always run even if the previous step fails
+        with:
+          report_paths: '**/build/test-results/test/TEST-*.xml'    
 
       # AWS 자격 인증 설정
       - name: Configure AWS credentials
