docs : add actuator

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -41,3 +41,9 @@ logging:
     org:
       springframework:
         transaction: DEBUG
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
