--- a/.github/workflows/CI-pipeline.yml
+++ b/.github/workflows/CI-pipeline.yml
@@ -15,13 +15,13 @@ env:
   # AWS Region
   AWS_REGION: ap-northeast-2
   # 도커 컨테이너명
-  CONTAINER_NAME: concert-dev
+  CONTAINER_NAME: ${{ github.ref == 'refs/heads/master' && 'concert-prd' || 'concert-dev' }}
   # ECR 리포지토리명
-  ECR_REPOSITORY: ${{ github.ref == 'refs/heads/master' && 'concert-api-prd' || 'concert-dev' }}
+  ECR_REPOSITORY: ${{ github.ref == 'refs/heads/master' && 'concert-prd' || 'concert-dev' }}
   # ECS 클러스터명
-  ECS_CLUSTER: ${{ github.ref == 'refs/heads/master' && 'concert-api-prd' || 'cluster-concert-dev' }}
+  ECS_CLUSTER: ${{ github.ref == 'refs/heads/master' && 'cluster-concert-prd' || 'cluster-concert-dev' }}
   # ECS 서비스명
-  ECS_SERVICE: ${{ github.ref == 'refs/heads/master' && 'concert-api-prd' || 'concert-dev' }}
+  ECS_SERVICE: ${{ github.ref == 'refs/heads/master' && 'concert-prd' || 'concert-dev' }}
   # ECS Task definition 파일명
   ECS_TASK_DEFINITION: ${{ github.ref == 'refs/heads/master' && 'task-definition-prd.json' || 'task-definition-dev.json' }}
 
@@ -30,7 +30,8 @@ jobs:
     runs-on: ubuntu-latest
     # 체크아웃
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
       # JDK 설정
       - name: Set up JDK 17
@@ -48,32 +49,39 @@ jobs:
         env:
           SPRING_PROFILES_ACTIVE: ${{ env.ACTIVE_PROFILE }}
 
+  cd:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       # AWS 자격 인증 설정
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
+          aws-region: ${{ env.AWS_REGION }}
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
 
       # ECR 로그인
-      - name: Login to Amazon ECR
-        id: login-ecr
+      - name: Login AWS ECR service
+        id: ecr-login
         uses: aws-actions/amazon-ecr-login@v1
 
       # ECR에 도커 이미지 Push
-      - name: Push docker image to ECR
+      - name: Push docker image to Amazon ECR
         id: build-image
         env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          IMAGE_TAG: latest
+          ECR_REGISTRY: ${{ steps.ecr-login.outputs.registry }}
+          IMAGE_TAG: dev-${{ github.sha }}
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --build-arg SPRING_PROFILE=${{ env.ACTIVE_PROFILE }} .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
       # ECS Task 정의
-      - name: Fill in the new image ID in the Amazon ECS task definition
+      - name: Render ECS task-definition
         id: render-task-definition
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
@@ -82,7 +90,7 @@ jobs:
           image: ${{ steps.build-image.outputs.image }}
 
       # ECS Task Push
-      - name: Deploy Amazon ECS task definition
+      - name: Deploy Amazon ECS task-definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
           task-definition: ${{ steps.render-task-definition.outputs.task-definition }}
