--- a/.github/workflows/CI-pipeline.yml
+++ b/.github/workflows/CI-pipeline.yml
@@ -49,12 +49,24 @@ jobs:
         env:
           SPRING_PROFILES_ACTIVE: ${{ env.ACTIVE_PROFILE }}
 
-  cd:
+      - name: Upload JAR Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: application-jar
+          path: build/libs/*.jar
+
+  deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Download JAR Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: application-jar
+          path: build/libs
 
       # AWS 자격 인증 설정
       - name: Configure AWS credentials
