--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -11,6 +11,7 @@ spring:
       settings:
         web-allow-others: true
 
+# 개발 및 테스트 환경 H2 설정
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:db;MODE=MYSQL
@@ -18,6 +19,8 @@ spring:
     password:
 
   jpa:
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQLDialect
     hibernate:
       ddl-auto: create
     properties:
@@ -27,6 +30,22 @@ spring:
     #show-sql: true
     open-in-view: false
     defer-datasource-initialization: true
+
+
+# Mysql 설정 
+#  jpa:
+#    hibernate:
+#      ddl-auto: create
+#    defer-datasource-initialization: true
+#  sql:
+#    init:
+#      mode: always
+
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://localhost:33060/mysql?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+#    username: root
+#    password: 1234
 
 #p6spy query logging
 decorator:
