config : add testcontainers

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,11 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	testImplementation "org.testcontainers:testcontainers:1.19.8"
+	testImplementation 'org.testcontainers:junit-jupiter'
+	testImplementation "org.testcontainers:mysql:1.19.8"
+
 	testCompileOnly 'org.projectlombok:lombok:1.18.20'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
 }
